<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <ImageView
        android:layout_alignBottom="@id/questions"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/mark_zuckerber"/>

    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="220dp"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@id/questions"
        android:layout_marginBottom="120dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/level"
        android:orientation="vertical">
        <TextView
            android:id="@+id/l15"
            android:text="@string/l15"
            android:layout_height="14dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="#f76f00"/>
        <TextView
            android:id="@+id/l14"
            android:text="@string/l14"
            android:layout_height="14dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="#f76f00"/>
        <TextView
            android:id="@+id/l13"
            android:text="@string/l13"
            android:layout_height="14dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="#f76f00"/>
        <TextView
            android:id="@+id/l12"
            android:text="@string/l12"
            android:layout_height="14dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="#f76f00"/>
        <TextView
            android:id="@+id/l11"
            android:text="@string/l11"
            android:layout_height="14dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="#f76f00"/>
        <TextView
            android:id="@+id/l10"
            android:text="@string/l10"
            android:layout_height="14dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="#f76f00"/>
        <TextView
            android:id="@+id/l9"
            android:text="@string/l9"
            android:layout_height="14dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="#f76f00"/>
        <TextView
            android:id="@+id/l8"
            android:text="@string/l8"
            android:layout_height="14dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="#f76f00"/>
        <TextView
            android:id="@+id/l7"
            android:text="@string/l7"
            android:layout_height="14dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="#f76f00"/>
        <TextView
            android:id="@+id/l6"
            android:text="@string/l6"
            android:layout_height="14dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="#f76f00"/>
        <TextView
            android:id="@+id/l5"
            android:text="@string/l5"
            android:layout_height="14dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="#f76f00"/>
        <TextView
            android:id="@+id/l4"
            android:text="@string/l4"
            android:layout_height="14dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="#f76f00"/>
        <TextView
            android:id="@+id/l3"
            android:text="@string/l3"
            android:layout_height="14dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="#f76f00"/>
        <TextView
            android:id="@+id/l2"
            android:text="@string/l2"
            android:layout_height="14dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="#f76f00"/>
        <TextView
            android:id="@+id/l1"
            android:text="@string/l1"
            android:layout_height="14dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textColor="#f76f00"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/iButtonCallToFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/call_button"
        android:background="@null"
        android:layout_marginStart="10dp"
        android:layout_marginTop="45dp"
        android:onClick="onClickButtonCall"/>

    <ImageButton
        android:id="@+id/iButtonCrowd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/crowd"
        android:background="@null"
        android:layout_alignTop="@id/iButtonCallToFriend"
        android:layout_marginStart="10dp"
        android:layout_marginTop="45dp"
        android:onClick="onClickButtonCrowd"/>

    <ImageButton
        android:id="@+id/iButtonFifty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fifty"
        android:background="@null"
        android:layout_alignTop="@id/iButtonCrowd"
        android:layout_marginStart="10dp"
        android:layout_marginTop="45dp"
        android:onClick="onClickFifty"/>



    <TextView
        android:id="@+id/questions"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@id/button_a"
        android:background="@drawable/questions"
        android:layout_marginBottom="50dp"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:padding="4dp"
        android:textColor="#f5ecab"
        />

    <Button
        android:id="@+id/button_d"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:onClick="onClickButtonD"
        android:textColor="#d4d4d4"/>
    <Button
        android:id="@+id/button_c"
        android:gravity="center"
        android:layout_alignBottom="@id/button_d"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:onClick="onClickButtonC"
        android:textColor="#d4d4d4"/>
    <Button
        android:id="@+id/button_b"
        android:gravity="center"
        android:layout_alignBottom="@id/button_c"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:onClick="onClickButtonB"
        android:textColor="#d4d4d4"/>
    <Button
        android:id="@+id/button_a"
        android:gravity="center"
        android:layout_alignBottom="@id/button_b"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:onClick="onClickButtonA"
        android:textColor="#d4d4d4"/>


</RelativeLayout>