<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WinActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="75sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textColor="#0066a6"
        android:text="@string/win"/>
    <Button
        android:id="@+id/button_restart"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="340dp"
        android:gravity="center"
        android:text="@string/restart"
        android:textSize="18sp"
        android:textColor="#003b87"
        android:onClick="onClickRestart"
        />
    <Button
        android:id="@+id/button_exit"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="430dp"
        android:gravity="center"
        android:text="@string/exit"
        android:textColor="#003b87"
        android:textSize="18sp"
        android:onClick="onClickExit"
        />

</RelativeLayout>